Instructor model added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/academy
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.validation-query=select 1
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.database=POSTGRESQL
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
