--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
+management.server.port=9001
+management.server.address=127.0.0.1
+management.endpoints.web.exposure.include=*
+
