Contacts added, a lot of changes in models, study types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ management.server.port=9001
 management.server.address=127.0.0.1
 management.endpoints.web.exposure.include=*
 
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
